fixed hover effect sidemenu on small screen

--- a/home.css
+++ b/home.css
@@ -235,15 +235,6 @@ nav ul{
     transition: right 0.5s;
 }
 
-nav ul li{
-    display: block;
-    margin: 25px;
-}
-
-nav ul li a{
-    color: #FFE4C4;
-}
-
 nav ul .fa-solid{
     position: absolute;
     top: 25px;
@@ -263,6 +254,36 @@ nav .fa-solid{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
+}
+
+/*-----------sidemenu-----------*/
+
+nav ul li{
+    display: block;
+    margin: 25px;
+}
+
+nav ul li a{
+    color: #FFE4C4;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #FFE4C4;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover{
+    text-decoration: none;
+    color: #FFE4C4;
 }
 
 /*-----------copyright-----------*/
